# sentinel

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  Cargo.toml  Makefile  docker-compose.yml  intent.md  lineage.json  manifest.json  operations.json  plan.md  transcript.jsonl
.github/workflows/: ci.yml
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: config.rs  error.rs  events.rs  lib.rs  types.rs
crates/sentinel-discover/: Cargo.toml
crates/sentinel-discover/src/: config.rs  diff.rs  engram.rs  error.rs  lib.rs  main.rs  nmap_xml.rs  persist.rs  scanner.rs  scheduler.rs
crates/sentinel-engram/: Cargo.toml
crates/sentinel-engram/src/: hash.rs  lib.rs  session.rs  store.rs
crates/sentinel-graph/: Cargo.toml
crates/sentinel-graph/src/: client.rs  lib.rs  mutations.rs  queries.rs
crates/sentinel-graph/tests/: integration.rs
crates/sentinel-pathfind/: Cargo.toml
crates/sentinel-pathfind/src/: algorithms.rs  blast.rs  engram.rs  error.rs  fetch.rs  graph.rs  lateral.rs  lib.rs  main.rs  scoring.rs  types.rs
deploy/docker/: Dockerfile.discover
docs/architecture/: 001-architectural-analysis.md
docs/architecture/diagrams/: build-order.mmd  c4-container.mmd  c4-context.mmd  dependency-graph.mmd
policies/agent/: base.rego
policies/response/: approval.rego
python/: pyproject.toml
python/sentinel-agents/: pyproject.toml
python/sentinel-agents/sentinel_agents/: __init__.py  base.py  llm.py  orchestrator.py  tools.py  types.py
python/sentinel-agents/sentinel_agents/hunt/: __init__.py  base_hunt.py  credential_abuse.py  data_exfiltration.py  lateral_movement.py  models.py  sigma.py
python/sentinel-agents/sentinel_agents/simulate/: __init__.py  base_sim.py  exfiltration.py  initial_access.py  lateral_movement.py  mitre.py  models.py  privilege_escalation.py
python/sentinel-agents/tests/: test_base_agent.py  test_base_sim.py  test_credential_abuse.py  test_data_exfiltration.py  test_exfiltration_sim.py  test_hunt_agent.py  test_hunt_models.py  test_initial_access.py  test_lateral_movement.py  test_lateral_movement_sim.py  test_llm.py  test_mitre.py  test_orchestrator.py  test_privilege_escalation.py  test_sim_models.py  test_tools.py
python/sentinel-api/: Dockerfile  pyproject.toml
python/sentinel-api/sentinel_api/: __init__.py  config.py  db.py  main.py
python/sentinel-api/sentinel_api/engram/: __init__.py  models.py  session.py  store.py
python/sentinel-api/sentinel_api/middleware/: __init__.py  auth.py
python/sentinel-api/sentinel_api/models/: __init__.py  core.py  events.py
python/sentinel-api/sentinel_api/routes/: __init__.py  attack_paths.py  audit.py  governance.py  graph.py  health.py  hunt.py  simulations.py  vulnerabilities.py  ws.py
python/sentinel-api/sentinel_api/services/: __init__.py  cis_rules.py  config_auditor.py  epss_client.py  kev_client.py  nvd_client.py  pathfind.py  vuln_correlation.py
python/sentinel-api/tests/: test_attack_path_routes.py  test_audit_routes.py  test_auth.py  test_cis_rules.py  test_config_auditor.py  test_engram.py  test_epss_client.py  test_governance_routes.py  test_graph_routes.py  test_health.py  test_hunt_routes.py  test_kev_client.py  test_models.py  test_nvd_client.py  test_simulation_routes.py  test_vuln_correlation.py  test_vuln_routes.py
python/sentinel-connectors/: pyproject.toml
python/sentinel-connectors/sentinel_connectors/: __init__.py  base.py  credentials.py  registry.py  retry.py
python/sentinel-connectors/sentinel_connectors/cloud/: __init__.py  aws.py  azure.py  gcp.py
python/sentinel-connectors/sentinel_connectors/governance/: __init__.py  dns_analyzer.py  domains.py  flow_analyzer.py  models.py  risk_scorer.py  shadow_ai.py
python/sentinel-connectors/sentinel_connectors/identity/: __init__.py  entra.py  okta.py
python/sentinel-connectors/sentinel_connectors/siem/: __init__.py  elastic.py  models.py  query_builder.py
python/sentinel-connectors/tests/: test_aws.py  test_azure.py  test_base.py  test_credentials.py  test_elastic.py  test_entra.py  test_gcp.py  test_okta.py  test_query_builder.py  test_registry.py  test_retry.py  test_shadow_ai.py
python/sentinel-policy/: pyproject.toml
python/sentinel-policy/sentinel_policy/: __init__.py  engine.py  local.py  models.py
python/sentinel-policy/tests/: test_engine.py  test_local.py  test_policy_models.py
schemas/clickhouse/: 001_events_table.sql
schemas/events/: sentinel-events.json
schemas/neo4j/: 001_initial_schema.cypher  002_finding_schema.cypher
schemas/postgres/: 001_initial_schema.sql
scripts/: seed.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  main.tsx
web/src/components/attack-paths/: AttackPathDetail.test.tsx  AttackPathDetail.tsx  AttackPathList.test.tsx  AttackPathList.tsx  AttackPathMap.tsx  AttackPathSummary.test.tsx  AttackPathSummary.tsx
web/src/components/auth/: ProtectedRoute.tsx
web/src/components/hunt-feed/: HuntFeed.test.tsx  HuntFeed.tsx  HuntFindingDetail.test.tsx  HuntFindingDetail.tsx  HuntSummary.test.tsx  HuntSummary.tsx
web/src/components/layout/: Header.test.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
web/src/components/network-map/: AssetTable.test.tsx  AssetTable.tsx  GraphToolbar.test.tsx  GraphToolbar.tsx  NetworkGraph.test.tsx  NetworkGraph.tsx  NodeDetail.test.tsx  NodeDetail.tsx  graph-utils.ts
web/src/components/simulations/: SimulationList.test.tsx  SimulationList.tsx  SimulationSummary.test.tsx  SimulationSummary.tsx
web/src/components/ui/: StatusCard.test.tsx  StatusCard.tsx
web/src/components/vulnerabilities/: VulnDetail.test.tsx  VulnDetail.tsx  VulnSummary.test.tsx  VulnSummary.tsx  VulnTable.test.tsx  (+1 more)
web/src/hooks/: AuthContext.ts  useAttackPaths.ts  useAuth.tsx  useAuthHook.ts  useGraphData.ts  useGraphSearch.ts  useHuntFindings.ts  useShadowAi.ts  useSimulations.ts  useVulnerabilities.ts
web/src/pages/: Defend.tsx  Discover.tsx  Govern.tsx  Login.tsx  Observe.tsx
web/src/services/: api.ts  auth.test.ts  auth.ts  ws.ts
web/src/types/: core.ts  events.ts
