[workspace]
resolver = "2"
members = [
    "crates/sentinel-core",
    "crates/sentinel-engram",
    "crates/sentinel-graph",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Proprietary"
repository = "https://github.com/theatticai/sentinel"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Hashing
blake3 = "1"

# Neo4j
neo4rs = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
