[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel — Enterprise Autonomous Cyber Defense Platform"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "sentinel-api",
    "sentinel-policy",
    "sentinel-connectors",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TC"]
ignore = ["B008"]  # FastAPI Depends() / Query() in function defaults is idiomatic

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["*/tests"]
asyncio_mode = "auto"
