[package]
name = "sentinel-core"
description = "Shared types, configuration, and error handling for the Sentinel platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
