[package]
name = "sentinel-engram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tamper-evident reasoning capture for Sentinel AI agents"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
