[package]
name = "sentinel-pathfind"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Attack path computation engine for the Sentinel knowledge graph"

[[bin]]
name = "sentinel-pathfind"
path = "src/main.rs"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-graph = { path = "../sentinel-graph" }
sentinel-engram = { path = "../sentinel-engram" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }

[dev-dependencies]
tempfile = "3"
