[project]
name = "sentinel-connectors"
version = "0.1.0"
description = "Sentinel Connectors — cloud and identity integration framework"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "sentinel-api",
]

[project.optional-dependencies]
aws = ["boto3>=1.35.0"]
azure = [
    "azure-identity>=1.19.0",
    "azure-mgmt-compute>=33.0.0",
    "azure-mgmt-network>=28.0.0",
    "azure-mgmt-keyvault>=10.3.0",
    "azure-mgmt-containerservice>=31.0.0",
    "msgraph-sdk>=1.12.0",
]
gcp = [
    "google-cloud-compute>=1.19.0",
    "google-cloud-resource-manager>=1.12.0",
    "google-cloud-container>=2.49.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.34.0",
]
elastic = [
    "elasticsearch[async]>=8.12.0",
]
llm = [
    "sentinel-agents",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "moto[ec2,iam,s3,rds,lambda,ecs,eks]>=5.0",
    "ruff>=0.9",
    "boto3>=1.35.0",
    "elasticsearch[async]>=8.12.0",
]

[tool.uv.sources]
sentinel-api = { workspace = true }
sentinel-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel_connectors"]
